--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	</style>
 </head>
 <body>
-	<h1>Visiting Archer-Malmo</h1>
+	<h1>Visiting Archer-Malmo Brandon Wery</h1>
 	<img src="img/archermalmo.png">
 	<p>	My experience when visiting Archer Malmo was very interesting.  The feeling of the building was not what I expected.  There were tons of bright colors on the walls and the employees had their own offices.  I was expecting cubicles scattered everywhere and a lot of background noise like phones ringing constantly.  The building was tranquil and colorful.  I liked the idea of having dogs allowed in the building, it was fun to see some dogs walking by smiling and enjoying their time.  I think that having the privilege to do that is really cool.  There could also be some benefits for having dogs allowed for work, like stress relief for instance.  
 	</p>
